добавление реквестов и тестов